tests/errors/semantic/test_semantic_03_undeclared_identifier.f90
program test_semantic_03_undeclared_identifier
  implicit none
  integer :: a
  a = 1
  b = 2
end program test_semantic_03_undeclared_identifier
